# nojs-bun

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  biome.json  build.js  bunfig.toml  knip.json  memory.md  migration.md  package.json  performance.md  plan1.md  sync-map-with-nojs.md  test-server.js
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: designer.agent.md  dev-html-css.agent.md  dev-js.agent.md  i18n.agent.md  (+8 more)
__benchmarks__/: keyed-vs-rebuild.bench.spec.ts  loops-benchmark.test.js
__tests__/: animations.test.js  audit-changes.test.js  core.test.js  devtools.test.js  directives-core.test.js  directives-data.test.js  directives-head.test.js  directives-ui.test.js  dnd.test.js  dom.test.js  fetch.test.js  filters.test.js  i18n.test.js  inject-head-attrs.test.js  integration.test.js  leak-regression.test.js  optimization.test.js  perf-debug.test.js  perf-events.test.js  perf-loops.test.js  perf-static.test.js  plugin-system.test.js  registry.test.js  router.test.js  setup.js  signals.test.js  virtual-list.test.js
design/: design-v2.pen  design.pen
docs/: community-qa.md  dev-server.js  index.html  llms-full.txt  llms.txt  sitemap.xml  wasm-hybrid-architecture.md  webstandards.md
e2e/: playwright.config.ts
src/: GEMINI.md  animations.js  cdn.js  context.js  devtools.js  dom.js  evaluate.js  fetch.js  filters.js  globals.js  i18n.js  index.js  registry.js  router.js  signals.js
src/wasm/: Cargo.toml  loader.js
src/wasm/src/: diff.rs  lib.rs  parser.rs  sanitizer.rs
types/: nojs-plugin.d.ts
(+129 files in other folders)
